Adicionado caminho de comandos de compilação para configurações do VSCode

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
     "idf.flashType": "UART",
-    "idf.port": "/dev/ttyUSB0"
+    "idf.port": "/dev/ttyUSB0",
+
+    "C_Cpp.default.compileCommands": "${workspaceFolder}/build/compile_commands.json"
 }
